# CrittersCrossing

./: Game.cpp  Game.h  GameObject.cpp  GameObject.h  main.cpp  path.aseprite
Data/assets/crossing/UI/: crittercrossing working layout.aseprite  day end screen.aseprite
Data/assets/crossing/critters/: Sprite-0008.aseprite  mouse passport image.aseprite
src/: CMakeLists.txt  DayEndState.cpp  DayEndState.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameStateManager.h  MenuState.cpp  MenuState.h  PlayingState.cpp  PlayingState.h  UImanager.cpp  UImanager.h  Vector2.h  main.cpp
